AX: Typing broken on form input field while using VoiceOver https://bugs.webkit.org/show_bug.cgi?id=155613

Reviewed by Chris Fleizach.

Source/WebCore:

The div element inside the INPUT element gives a collapsed TextMarkerRange which then creates
a collapsed Range. Fixed it by using the parent node to create the Range when the div node has
no children.

Test: accessibility/mac/text-marker-range-for-node-without-children.html

* accessibility/AXObjectCache.cpp:
(WebCore::setRangeStartOrEndWithCharacterOffset):

LayoutTests:

* accessibility/mac/text-marker-range-for-node-without-children-expected.txt: Added.
* accessibility/mac/text-marker-range-for-node-without-children.html: Added.


Canonical link: https://commits.webkit.org/173761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198426 268f45cc-cd09-0410-ab3c-d52691b4dbfc